<resources>
    <!-- App and activity names -->
    <string name="app_name">Word Weaver</string>
    <string name="title_activity_add_lang">Word generation</string>
    <string name="title_activity_help">Help</string>

    <!-- App menu strings -->
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_modify">Modify</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_rename">Rename</string>

    <!-- Open lang strings -->
    <string name="open_lang_title_categories">Categories:</string>
    <string name="open_lang_title_rules">Rewrite rules:</string>
    <string name="open_lang_title_syllables">Syllable types:</string>
    <string name="open_lang_title_dropoff">\nDropoff:</string>
    <string name="open_lang_title_syl_prob">Syllable cutoff\nprobability:</string>
    <string name="open_lang_title_monosyl_prob">Monosyllable\nprobability:</string>
    <string name="open_lang_button_text">Generate</string>

    <!-- Dropoff option strings -->
    <string name="dropoff_equal">Equal</string>
    <string name="dropoff_fast">Fast</string>
    <string name="dropoff_medium">Medium</string>
    <string name="dropoff_slow">Slow</string>
    <string-array name="dropoff_options">
        <item>@string/dropoff_equal</item>
        <item>@string/dropoff_fast</item>
        <item>@string/dropoff_medium</item>
        <item>@string/dropoff_slow</item>
    </string-array>

    <!-- Syllable type probability option strings -->
    <string name="sylprob_equal">Equal</string>
    <string name="sylprob_fast">Heavy</string>
    <string name="sylprob_medium">Medium</string>
    <string name="sylprob_slow">Light</string>
    <string-array name="sylprob_options">
        <item>@string/sylprob_equal</item>
        <item>@string/sylprob_fast</item>
        <item>@string/sylprob_medium</item>
        <item>@string/sylprob_slow</item>
    </string-array>

    <!-- Monosyllable probability option strings -->
    <string name="monosyl_always">Always</string>
    <string name="monosyl_mostly">Mostly</string>
    <string name="monosyl_freq">Frequent</string>
    <string name="monosyl_less">Less</string>
    <string name="monosyl_rare">Rare</string>
    <string-array name="monosyl_options">
        <item>@string/monosyl_always</item>
        <item>@string/monosyl_mostly</item>
        <item>@string/monosyl_freq</item>
        <item>@string/monosyl_less</item>
        <item>@string/monosyl_rare</item>
    </string-array>

    <!-- Dialog strings -->
    <string name="dialog_empty_fields">Do you want to empty all fields?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_save_lang">Name the language to be saved:</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Snackbar strings -->
    <string name="snackbar_delete_warning">has been deleted.</string>
    <string name="snackbar_delete_action">Undo</string>
    <string name="snackbar_delete_reverted">has been restored.</string>

    <!-- About strings -->
    <string name="about_text">\"Word Weaver\" is a personal project of Guillermo Serrahima, born from
        the goal of porting zompist.com\'s word generation functionality to Android.</string>
    <string name="about_button">OK</string>

    <!-- Default and other strings -->
    <string name="default_lang_name">New language</string>
    <string name="default_author">Unknown</string>
    <string name="default_dropoff" translatable="false">MEDIUM</string>
    <string name="default_syl_prob" translatable="false">MEDIUM</string>
    <string name="default_monosyl_prob" translatable="false">FREQUENT</string>
    <string name="feature_not_implemented">This feature has not been implemented yet</string>
</resources>
