<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_book_clear"
        android:title="@string/menu_clear"
        android:orderInCategory="200"
        android:icon="@drawable/ic_eraser_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/add_book_menu_save"
        android:title="@string/menu_save"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/add_book_help"
        android:title="@string/menu_help"
        android:orderInCategory="300"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/add_book_menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="500"
        app:showAsAction="never"
        />
</menu>